--- a/tools/assets/build.gradle
+++ b/tools/assets/build.gradle
@@ -20,5 +20,27 @@ android {
             assets.srcDirs = ['assets']
         }
     }
+
+    signingConfigs {
+        release {
+            keyAlias = "key0"
+        }
+    }
+
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
+        }
+    }
+
+    if (project.hasProperty('storeFile') &&
+            project.hasProperty('storePassword') &&
+            project.hasProperty('keyPassword')) {
+        android.signingConfigs.release.storeFile = file(storeFile)
+        android.signingConfigs.release.storePassword = storePassword
+        android.signingConfigs.release.keyPassword = keyPassword
+    } else {
+        buildTypes.release.signingConfig = null
+    }
     
 }
